[fix][dingo-calcite] Support sum(ifnull(a,b)) (#1425)